adding Twitter links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <!-- <br><br> -->
             <a href="./writings.html">Read</a> stuff I’ve written.
             <br><br>
-            <a href="./posters.html">See</a> posters I’ve made.
+            <!-- <a href="./posters.html">See</a> posters I’ve made.
+            <br><br> -->
+            Reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>, <a href="mailto:anirudh.c.mohan@gmail.com">email</a>, or <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">LinkedIn</a>.
         </p>
     </body>
 </html>
