--- a/start-here.html
+++ b/start-here.html
@@ -37,7 +37,7 @@
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->            
             <br><br>
-            Please <a href="mailto:anirudh.c.mohan@gmail.com">email me</a> if you think we’d have a good conversation. I especially enjoy people who are kind, curious, think for themselves, and optimistic. 
+            Please reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> if you think we’d have a good chat. I especially enjoy people who are kind, curious, think for themselves, and optimistic. 
             <br><br>
             Thank you for visiting.
         </p>
