--- a/writings.html
+++ b/writings.html
@@ -28,6 +28,9 @@
             Writings
         </h1>
         <p class="body-text" id="start-here-text">
+            <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">                
+            </span>
+            <br><br>
             <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color">                
             </span>
             <br><br>
