copy changes to start here and writings

--- a/start-here.html
+++ b/start-here.html
@@ -30,14 +30,16 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My day job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I spend most of my time in San Francisco. I love stories, ideas, and sensory experiences. 
+            My main job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I also advise (1) consumer startups and (2) people looking to break into and grow their product management careers.
+            <br><br>
+            I spend most of my time in San Francisco. I love stories, films, music, and sensory experiences. 
             <br><br>
             Get to know me better by <a href="./writings.html">reading stuff I've written</a>.
             
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->            
             <br><br>
-            Please reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> if you think we’d have a good chat. I especially enjoy people who are kind, curious, think for themselves, and optimistic. 
+            Please reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> if you think we’d have a good chat. I especially enjoy people who are curious, honest, think for themselves, and optimistic. 
             <br><br>
             Thank you for visiting.
         </p>
