--- a/writings.html
+++ b/writings.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>Writings - Ani Mohan</title>
-        <meta name="description" content="Ani Mohan writings essays writing personal site">
+        <title>Stuff I've written - Ani Mohan</title>
+        <meta name="description" content="Ani Mohan writings essays writing personal site stuff I've written">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
             </h3>
         </a>
         <h1 class="title">
-            Writings
+            Stuff I've written
         </h1>
         <p class="body-text" id="start-here-text">
             <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">                
