updating website image, removing email, and adding padding to writing text bottom

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br><br>
             <!-- <a href="./posters.html">See</a> posters I’ve made.
             <br><br> -->
-            Reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>, <a href="mailto:anirudh.c.mohan@gmail.com">email</a>, or <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">LinkedIn</a>.
+            Connect with me on <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.
         </p>
     </body>
 </html>
