--- a/start-here.html
+++ b/start-here.html
@@ -30,7 +30,7 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My main job is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I also advise (1) consumer startups and (2) people looking to break into and grow their product management careers.
+            My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I also advise (1) consumer startups and (2) people looking to break into and grow their product management careers.
             <br><br>
             I spend most of my time in San Francisco. I love stories, films, music, and sensory experiences. 
             <br><br>
@@ -39,7 +39,7 @@
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- Get to know me best by <a href="./favorites.html">exploring ideas</a> that have influenced me and <a href="./writings.html">reading my work</a>. -->            
             <br><br>
-            Please reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> if you think we’d have a good chat. I especially enjoy people who are curious, honest, think for themselves, and optimistic. 
+            Please reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> if you think we’d have a good chat. I especially enjoy people who are curious, think for themselves, and optimistic. 
             <br><br>
             Thank you for visiting.
         </p>
