--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -89,7 +89,7 @@
             A big thank you to Shuhan He for housing me, the Woodside community for being so welcoming, Jennifer Lee for orchestrating the whole thing, and Debbie Lai for introducing me to Sundance.
             <br><br>                                
             If you have any thoughts, comments, or ideas based on anything I shared, please 
-            reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> and let’s discuss!
+            reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> and let’s discuss!
             <br><br>
             <b class="writing-section-lead" id="reviews">Film reviews</b>
             <br><br>
