--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -62,7 +62,7 @@
             <br><br>
             What's the use of learning something new, feeling something profound, or making something grand if you can't share it with others? We're social animals, hardwired to crave connection and distinguished by our ability to cooperate with others. But, nobody else can read your mind or feel your emotions, try as they might. Making sense of it all is something you have to do for yourself in your own time.
             <br><br>
-            If any of these resonate with you or you have suggestions on others to include, please let me know via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a>!            
+            If any of these resonate with you or you have suggestions on others to include, please let me know via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!            
         </p>
         
     </body>
