--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -104,7 +104,7 @@
             Having a tangible, purposeful goal (i.e. prettying my room) gave me the motivation to get started. For future creative projects, I’ll keep in the mind the value of setting a clear, meaningful intention before starting.
             <br><br>
             If you have any thoughts, comments, or ideas based on anything I shared, please 
-            reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> or <a href="mailto:anirudh.c.mohan@gmail.com">email</a> and let’s discuss!
+            reach out via <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a> and let’s discuss!
         </p>            
     </body>
 </html>
