--- a/writings.html
+++ b/writings.html
@@ -28,6 +28,9 @@
             Stuff I've written
         </h1>
         <p class="body-text" id="start-here-text">
+            <a href="./writings/team-market-product.html">Team > market > product</a><span class="writing-date-color">                
+            </span>
+            <br><br>
             <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">                
             </span>
             <br><br>
