--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
-        <title>A list of dialectics - Ani Mohan</title>
+        <title>Team > market > product - Ani Mohan</title>
         <meta name="description" content="A list of dialectics">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
