fix copy on home page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             <img src="./images/me.png" id="profile-pic" />
         </div>
         <p class="body-text" id="home-text">
-            Welcome to my home on the internet.
-            <br><br>
-            <a href="./start-here.html">Start here</a> if it's your first time here.
+            Hi! <a href="./start-here.html">Start here</a> if you don't know me.
             <br><br>
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- <a href="./favorites.html">Explore</a> my favorite content.  -->
