fixing team/market/product essay typos

--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -92,9 +92,9 @@
             <br><br>
             Second, communicating candidly. We looked at key metrics every day. We shifted away from verbal conservations and towards written memos when debating strategy and reviewing decisions. These practices prevented us from deluding ourselves and each other for too long when something wasn't working.
             <br><br>
-            Third, thinking probabilistically. We assigned probability weights to different possible outcomes for various experiments and product ideas we had. This allowed us to develop a shared understanding on risk and align on what we should prioritize. <a href="https://www.amazon.com/dp/B074DG9LQF/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank">Thinking in Bets</a> by Annie Duke is a fantastic read for this.
+            Third, thinking probabilistically. We assigned probability weights to different possible outcomes for various experiments and product ideas we had. This allowed us to develop a shared understanding of risk and align on priorities. <a href="https://www.amazon.com/dp/B074DG9LQF/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1" target="_blank">Thinking in Bets</a> by Annie Duke is a fantastic read for this.
             <br><br>
-            And fourth, having fun! We knew it was going to be a slog. The only way to persist is if we enjoyed the journey. We joked around, hosted fun events, and made fun of ourselves constantly. Of course, building games (and not, say, life-saving medical equipment) helped with this.
+            And fourth, having fun! We knew it'd be a slog. Without enjoying the journey we wouldn't have persisted. We joked around, hosted fun events, and made fun of ourselves constantly. Of course, working in gaming helped here.
             <br><br>
             This isn't an all-encompassing list, but I hope you get the point. 
             <br><br>
