--- a/start-here.html
+++ b/start-here.html
@@ -30,7 +30,9 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. I also advise (1) consumer startups and (2) people looking to break into and grow their product management careers.
+            My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. Before I was a product manager at Google on Chrome and Android.
+            <br><br>
+            I advise and angel invest in startups. I focus on consumer startups in categories like creator tools, gaming, new media platforms, and products in emerging markets (e.g. India, Southeast Asia, and Africa). But, <a target="_blank" href="https://animohan.me/writings/team-market-product.html">great founders and teams matter more than anything else</a> to me. Once I invest, I love helping founders with management, conflict resolution, product strategy, user research, communications, and managing their psychology. 
             <br><br>
             I spend most of my time in San Francisco. I love stories, films, music, and sensory experiences. 
             <br><br>
