updating start here text

--- a/start-here.html
+++ b/start-here.html
@@ -32,7 +32,7 @@
             <br><br>
             My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. Before I was a product manager at Google on Chrome and Android.
             <br><br>
-            I advise and angel invest in startups. I focus on consumer startups in categories like creator tools, gaming, new media platforms, and products in emerging markets (e.g. India, Southeast Asia, and Africa). But, <a target="_blank" href="https://animohan.me/writings/team-market-product.html">great founders and teams matter more than anything else</a> to me. Once I invest, I love helping founders with management, conflict resolution, product strategy, user research, communications, and managing their psychology. 
+            I advise and angel invest in startups. I focus on consumer startups in categories like creator tools, gaming, new media platforms, and products in emerging markets (e.g. India, Southeast Asia, and Africa). But, <a target="_blank" href="https://animohan.me/writings/team-market-product.html">great founders and teams matter more than</a> markets and products to me. Once I invest, I love helping founders with management, conflict resolution, product strategy, user research, communications, and managing their psychology. 
             <br><br>
             I spend most of my time in San Francisco. I love stories, films, music, and sensory experiences. 
             <br><br>
