updating photo + adding og tags

--- a/start-here.html
+++ b/start-here.html
@@ -2,6 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Start Here - Ani Mohan</title>
+        <meta property="og:title" content="Ani Mohan" />
+        <meta property="og:description" content="Ani Mohan's home on the internet." />
+        <meta property="og:image" content="https://animohan.me/images/me.png" />
         <meta name="description" content="Ani Mohan start here personal site">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,9 +33,9 @@
         <p class="body-text" id="start-here-text">            
             My goal with this site is to share my ideas with you, get your feedback on them, and inspire you to share your ideas with me.
             <br><br>
-            My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at <a href="https://area120.google.com/" target="_blank">Area 120</a>. Before I was a product manager at Google on Chrome and Android.
+            My <a target="_blank" href="https://www.linkedin.com/in/anirudhmohan/">main job</a> is co-founder and general manager of <a href="https://www.gamesnacks.com" target="_blank">GameSnacks</a> at Google's new business incubator, <a href="https://area120.google.com/" target="_blank">Area 120</a>. Before I was a product manager at Google on Chrome and Android. 
             <br><br>
-            I advise and angel invest in startups. I focus on consumer startups in categories like creator tools, gaming, new media platforms, and products in emerging markets (e.g. India, Southeast Asia, and Africa). But, <a target="_blank" href="https://animohan.me/writings/team-market-product.html">great founders and teams matter more than</a> markets and products to me. Once I invest, I love helping founders with management, conflict resolution, product strategy, user research, communications, and managing their psychology. 
+            I advise and angel invest in startups. I focus on consumer startups in categories like creator tools, gaming, new media platforms, and products in emerging markets (e.g. India, Southeast Asia, and Africa). But, <a target="_blank" href="https://animohan.me/writings/team-market-product.html">great founders and teams matter more</a> than markets and products in the early days. Once I invest, I love helping founders with management, conflict resolution, product strategy, user research, communications, and managing their psychology. 
             <br><br>
             I spend most of my time in San Francisco. I love stories, films, music, and sensory experiences. 
             <br><br>
