--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
     <head>
         <meta charset="utf-8">
+        <meta property="og:title" content="Team > market > product - Ani Mohan" />
+        <meta property="og:description" content="Team > market > product in early stage startups." />
+        <meta property="og:image" content="https://animohan.me/images/me.png" />
         <title>Team > market > product - Ani Mohan</title>
-        <meta name="description" content="A list of dialectics">
+        <meta name="description" content="Team > market > product in early stage startups">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700&display=swap" rel="stylesheet">
