adding clubhouse post

--- a/writings/blog-template.html
+++ b/writings/blog-template.html
@@ -2,6 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Blog post title</title>
+        <meta property="og:title" content="Ani Mohan" />
+        <meta property="og:description" content="Ani Mohan's home on the internet." />
+        <meta property="og:image" content="https://animohan.me/images/me.png" />        
         <meta name="description" content="Blog post title">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
