--- a/writings/five-days-at-sundance.html
+++ b/writings/five-days-at-sundance.html
@@ -2,6 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>Five days at Sundance - Ani Mohan</title>
+        <meta property="og:title" content="Five days at Sundance - Ani Mohan" />
+        <meta property="og:description" content="What I learned from five days at Sundance." />
+        <meta property="og:image" content="https://animohan.me/writings/writings-images/five-days-at-sundance/park_city_1.png" />              
         <meta name="description" content="Five days at Sundance">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
