--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -2,6 +2,9 @@
     <head>
         <meta charset="utf-8">
         <title>A list of dialectics - Ani Mohan</title>
+        <meta property="og:title" content="A list of dialectics - Ani Mohan" />
+        <meta property="og:description" content="A list of my favorite dialectics." />
+        <meta property="og:image" content="https://animohan.me/images/me.png" />              
         <meta name="description" content="A list of dialectics">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
