updating bio on home page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <img src="./images/me.png" id="profile-pic" />
         </div>
         <p class="body-text" id="home-text">
-            Hi! <a href="./start-here.html">Start here</a> if you don't know me.
+            Hi! I'm a technologist and entrepreneur. I'm obsessed with figuring out how the Internet will change how everyone on earth will learn, socialize, think, and make a living. 
+            <br><br>
+            I'm currently co-founder and general manager of GameSnacks at Google's new business incubator. <a href="./start-here.html">Start here</a> if you don't know me.
             <br><br>
             <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
             <!-- <a href="./favorites.html">Explore</a> my favorite content.  -->
