adding og:type meta tags

--- a/writings/how-clubhouse-evolved-from-gaming.html
+++ b/writings/how-clubhouse-evolved-from-gaming.html
@@ -4,6 +4,7 @@
         <meta property="og:title" content="How Clubhouse evolved from gaming - Ani Mohan" />
         <meta property="og:description" content="How Clubhouse borrowed proven concepts from gaming and through intentional product design repackaged it for broader audiences." />
         <meta property="og:image" content="https://animohan.me/images/me.png" />
+        <meta property="og:type" content="article" />
         <title>How Clubhouse evolved from gaming - Ani Mohan</title>
         <meta name="description" content="How Clubhouse borrowed proven concepts from gaming and through intentional product design repackaged it for broader audiences.">
         <meta name="author" content="Ani Mohan">
