--- a/writings/making-posters.html
+++ b/writings/making-posters.html
@@ -4,7 +4,8 @@
         <title>Making posters - Ani Mohan</title>
         <meta property="og:title" content="Making posters - Ani Mohan" />
         <meta property="og:description" content="Learning how to make digital posters from scratch." />
-        <meta property="og:image" content="https://animohan.me/posters/poster_pale_blue_dot.png" />        
+        <meta property="og:image" content="https://animohan.me/posters/poster_pale_blue_dot.png" />
+        <meta property="og:type" content="article" />        
         <meta name="description" content="Making posters">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
