--- a/writings/team-market-product.html
+++ b/writings/team-market-product.html
@@ -4,6 +4,7 @@
         <meta property="og:title" content="Team > market > product - Ani Mohan" />
         <meta property="og:description" content="Team > market > product in early stage startups." />
         <meta property="og:image" content="https://animohan.me/images/me.png" />
+        <meta property="og:type" content="article" />
         <title>Team > market > product - Ani Mohan</title>
         <meta name="description" content="Team > market > product in early stage startups">
         <meta name="author" content="Ani Mohan">
