--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -4,7 +4,8 @@
         <title>A list of dialectics - Ani Mohan</title>
         <meta property="og:title" content="A list of dialectics - Ani Mohan" />
         <meta property="og:description" content="A list of my favorite dialectics." />
-        <meta property="og:image" content="https://animohan.me/images/me.png" />              
+        <meta property="og:image" content="https://animohan.me/images/me.png" />
+        <meta property="og:type" content="article" />              
         <meta name="description" content="A list of dialectics">
         <meta name="author" content="Ani Mohan">
         <meta name="viewport" content="width=device-width, initial-scale=1">
