fixing typo in clubhouse post

--- a/writings/how-clubhouse-evolved-from-gaming.html
+++ b/writings/how-clubhouse-evolved-from-gaming.html
@@ -52,7 +52,7 @@
             <br><br>
             Watching live video (or any form of video) requires significant attention from viewers. Videos need to be funny, surprising, or beautiful -- while being visually interesting. 
             <br><br>
-            Paying a video game makes it easier to create compelling live video. Modern video games are visually rich. They’re often powered by the <a href="https://www.unrealengine.com/en-US/" target="_blank">same software</a> used to make Hollywood movies. The combination of immersive video game visuals and a livestreamer’s quirky commentary can be fun to watch. However, without the aid of a visually rich video game, it’s hard to create engaging live video.
+            Playing a video game makes it easier to create compelling live video. Modern video games are visually rich. They’re often powered by the <a href="https://www.unrealengine.com/en-US/" target="_blank">same software</a> used to make Hollywood movies. The combination of immersive video game visuals and a livestreamer’s quirky commentary can be fun to watch. However, without the aid of a visually rich video game, it’s hard to create engaging live video.
             <br><br>
             <b class="writing-section-sublead">Audio rooms</b>
             <br><br>
