Second replit commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <img src="./images/me.png" id="profile-pic" />
   </div>
   <p class="body-text" id="home-text">
-    Hello! I'm a technologist and entrepreneur. I'm obsessed with figuring out how the Internet will change how everyone
+    Hello! I'm a technologist and entrepreneur and builder. I'm obsessed with figuring out how the Internet will change
+    how everyone
     on earth will learn, socialize, think, and make a living.
     <br><br>
     I'm currently co-founder and general manager of <a target="_blank"
