--- a/writings.html
+++ b/writings.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <title>Stuff I've written - Ani Mohan</title>
-        <meta name="description" content="Ani Mohan writings essays writing personal site stuff I've written">
-        <meta name="author" content="Ani Mohan">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="./images/favicon.png">
-        <link rel="stylesheet" href="./css/styles.css">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-158669626-1');
-        </script>        
-    </head>
-    <body>
-        <!-- <script src="js/scripts.js"></script> -->
-        <a href="./index.html"> 
-            <h3 id="logo">
-                Ani Mohan
-            </h3>
-        </a>
-        <h1 class="title">
-            Stuff I've written
-        </h1>
-        <p class="body-text" id="start-here-text">
-            <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a><span class="writing-date-color">                
-            </span>
-            <br><br>
-            <a href="./writings/team-market-product.html">Team > market > product</a><span class="writing-date-color">                
-            </span>
-            <br><br>
-            <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">                
-            </span>
-            <br><br>
+
+<head>
+  <meta charset="utf-8">
+  <title>My writings - Ani Mohan</title>
+  <meta name="description" content="Ani Mohan writings essays writing personal site stuff I've written">
+  <meta name="author" content="Ani Mohan">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="./images/favicon.png">
+  <link rel="stylesheet" href="./css/styles.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-158669626-1');
+  </script>
+</head>
+
+<body>
+  <!-- <script src="js/scripts.js"></script> -->
+  <a href="./index.html">
+    <h3 id="logo">
+      Ani Mohan
+    </h3>
+  </a>
+  <h1 class="title">
+    My writings
+  </h1>
+  <p class="body-text" id="start-here-text">
+    <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a><span
+      class="writing-date-color">
+    </span>
+    <br><br>
+    <a href="./writings/team-market-product.html">Team > market > product</a><span class="writing-date-color">
+    </span>
+    <br><br>
+    <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">
+    </span>
+    <!-- <br><br>
             <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color">                
             </span>
             <br><br>
-            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"></span>             
-        </p>
-    </body>
+            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"></span>              -->
+  </p>
+</body>
+
 </html>
