--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Ani Mohan</title>
@@ -21,30 +21,21 @@
     gtag('config', 'UA-158669626-1');
   </script>
 </head>
-
 <body>
-  <!-- <script src="js/scripts.js"></script> -->
-  <h1 class="title">
-    Ani Mohan
-  </h1>
-  <div id="pic-div">
-    <img src="./images/me.png" id="profile-pic" />
+  <h1>Ani Mohan</h1>
+  <div>
+    <img src="./images/me.png" alt="Ani Mohan">
   </div>
-  <p class="body-text" id="home-text">
+  <p>
     Welcome to my website. I currently lead a product team at Google Labs building new generative AI products.
-    Previously, I was co-founder and general manager of <a target="_blank"
-      href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
+    Previously, I was co-founder and general manager of <a target="_blank" href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
     a gaming platform acquired by Google.
     <br><br>
-    <!-- PRIORITY TODO: Once I finish my favorites post, uncomment below and delete above -->
-    <!-- <a href="./favorites.html">Explore</a> my favorite content.  -->
-    <!-- <br><br> -->
     <a href="./start-here.html">Start here</a> if you don't know me.
     <br><br>
-    Read <a href="./writings.html">my writings</a>.
+    Read <a href="./writings.html">my writings</a>. See <a href="./press.html">press here</a>.
     <br><br>
     Connect with me on <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.
   </p>
 </body>
-
 </html>
