--- a/writings.html
+++ b/writings.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -20,30 +21,20 @@
 </head>
 
 <body>
-  <!-- <script src="js/scripts.js"></script> -->
-  <a href="./index.html">
-    <h3 id="logo">
+  <a id="logo" href="./index.html">
+    <h3>
       Ani Mohan
     </h3>
   </a>
-  <h1 class="title">
+  <h1>
     My writings
   </h1>
-  <p class="body-text" id="start-here-text">
-    <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a><span
-      class="writing-date-color">
-    </span>
+  <p>
+    <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a>
     <br><br>
-    <a href="./writings/team-market-product.html">Team > market > product</a><span class="writing-date-color">
-    </span>
+    <a href="./writings/team-market-product.html">Team > market > product</a>
     <br><br>
-    <a href="./writings/list-of-dialectics.html">A list of dialectics</a><span class="writing-date-color">
-    </span>
-    <!-- <br><br>
-            <a href="./writings/five-days-at-sundance.html">Five days at Sundance</a><span class="writing-date-color">                
-            </span>
-            <br><br>
-            <a href="./writings/making-posters.html">Making posters</a><span class="writing-date-color"></span>              -->
+    <a href="./writings/list-of-dialectics.html">A list of dialectics</a>
   </p>
 </body>
 
