CSS simplification of all pages

--- a/press.html
+++ b/press.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Ani Mohan" />
   <meta property="og:description" content="Ani Mohan's home on the internet." />
   <meta property="og:image" content="https://animohan.me/images/me.png" />
-  <meta name="description" content="Ani Mohan start here personal site">
+  <meta name="description" content="Ani Mohan press personal site">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
   <h1>
     Press
   </h1>
-  <h3>Articles</h3>
+  <h2>Articles</h2>
   <p><a target="_blank"
       href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks
       acquired, crosses 35 million users</a> (GameDeveloper.com)
@@ -50,7 +50,7 @@
       quick casual, games to any device</a> (Google Keyword)</p>
   <p><a target="_blank" href="https://www.forbes.com/30-under-30/2021/games/?profile=gamesnacks">Forbes 30 under 30</a>
   </p>
-  <h3>Videos</h3>
+  <h2>Videos</h2>
   <p><a target="_blank" href="https://www.youtube.com/watch?v=fGGO7Fpy-Gk">GameSnacks: Google's new HTML5 gaming
       platform</a></p>
   <p><a target="_blank" href="https://www.youtube.com/watch?v=tsr9eUwfGcY&t=2s">Modern mobile web</a></p>
@@ -60,7 +60,7 @@
   <p><a target="_blank" href="https://youtu.be/09vUYIc_k3k?t=1">Choose a PM role that's right for you</a></p>
   <p><a target="_blank" href="https://www.youtube.com/watch?v=Gg9N9F8oE7Y&t=1s">Different types of product
       management</a></p>
-  <h3>Podcasts</h3>
+  <h2>Podcasts</h2>
   <p><a target="_blank" href="https://open.spotify.com/episode/646ghh9dXr33gjHwPRquj8?si=e6577bd6721c49dd&nd=1">Game of
       Life</a></p>
   <p><a target="_blank" href="https://open.spotify.com/episode/2ZFAZWHJpxXpQa4Gg82bpk?si=7b47dd0c71c34ed3&nd=1">Startup
