--- a/writings.html
+++ b/writings.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>My writings - Ani Mohan</title>
+  <meta property="og:title" content="My writings - Ani Mohan" />
+  <meta property="og:description" content="Ani Mohan's writings on the internet." />
+  <meta property="og:image" content="https://animohan.me/images/me.png" />
   <meta name="description" content="Ani Mohan writings essays writing personal site stuff I've written">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
