--- a/writings/list-of-dialectics.html
+++ b/writings/list-of-dialectics.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -6,15 +7,14 @@
   <meta property="og:title" content="A list of dialectics - Ani Mohan" />
   <meta property="og:description" content="A list of my favorite dialectics." />
   <meta property="og:image" content="https://animohan.me/images/me.png" />
-  <meta property="og:type" content="article" />
   <meta name="description" content="A list of dialectics">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1">  </script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {dataLayer.push(arguments);}
@@ -24,81 +24,63 @@
 </head>
 
 <body>
-  <!-- <script src="js/scripts.js"></script> -->
-  <h3>
-    <a id="logo" href="../index.html">
+  <a id="logo" href="../index.html">
+    <h3>
       Ani Mohan
-    </a>
-  </h3>
-  <h1 class="title">
+    </h3>
+  </a>
+  <h1>
     A list of dialectics
   </h1>
-  <p class="body-text" id="writing-body-text-short-title">
-    <i>Nov 26, 2020</i>
-    <br><br>
-    <i>"The test of a first-rate intelligence is the ability to hold two opposing ideas in mind at the same time and
-      still retain the ability to function."</i> - F. Scott Fitzgerald
-    <br><br>
-    Simple rules of thumb are memorable but rarely drive good decisions in a complex world. Instead I prefer dialectics:
-    two seemingly opposing ideas whose union hints at a larger truth.
-    <br><br>
-    I've collected a few of my favorites below. I often explain them via startups (my world) and business. They're
-    applicable across other domains too.
-    <br><br>
-    1. <b>Optimism <> Pessimism</b>
-    <br><br>
-    Startups requires incredible optimism. You must have inordinate conviction that your vision for the business will
+  <p><i>Nov 26, 2020</i></p>
+  <p><i>"The test of a first-rate intelligence is the ability to hold two opposing ideas in mind at the same time and
+      still retain the ability to function."</i> - F. Scott Fitzgerald</p>
+  <p>Simple rules of thumb are memorable but rarely drive good decisions in a complex world. Instead I prefer
+    dialectics: two seemingly opposing ideas whose union hints at a larger truth.</p>
+  <p>I've collected a few of my favorites below. I often explain them via tech startups and business, which I think
+    about the most. They're applicable across other domains too.</p>
+  <h2>1. Optimism <> Pessimism</h2>
+  <p>Startups requires incredible optimism. You must have inordinate conviction that your vision for the business will
     come to bear. It's the only way to convince yourself, employees, investors, partners, and customers to part with
     time and money. But things will likely get really tough. 90% of startups fail. You must remain skeptical you will
     defy daunting odds. You don't want to waste your (or anyone else's) time working on something that won't succeed.
-    <br><br>
-    2. <b>Attachment <> Detachment</b>
-    <br><br>
-    Whether you want to perform the simplest task or achieve the grandest goal, you need to desire a positive outcome.
+  </p>
+  <h2>2. Attachment <> Detachment</h2>
+  <p>Whether you want to perform the simplest task or achieve the grandest goal, you need to desire a positive outcome.
     Otherwise, how will you summon the motivation to get out of bed in the morning and do the work? But, the quality of
     your effort might be irrelevant. Factors beyond your control might dictate the final outcome. If you get too
-    attached to the fruits of your labor, you're leaving your mood and self-esteem to the whims of chance.
-    <br><br>
-    3. <b>Explore <> Exploit</b>
-    <br><br>
-    The world is rich and varied. There's always something new to learn, see, feel, and taste. And you might enjoy those
+    attached to the fruits of your labor, you're leaving your mood and self-esteem to the whims of chance.</p>
+  <h2>3. Explore <> Exploit</h2>
+  <p>The world is rich and varied. There's always something new to learn, see, feel, and taste. And you might enjoy
+    those
     new things more than you've ever enjoyed anything you've experienced. It's impossible to know unless you explore
     further. But you already have a sense of what you prefer and what you don't. You don't want to waste your precious
-    time on things that won't give you joy. So, you might as well double down on your favorites.
-    <br><br>
-    4. <b>Macro <> Micro</b>
-    <br><br>
-    Diving into a quarterly earnings report gives you a macro view of a company. You'll get a sense of things you might
+    time on things that won't give you joy. So, you might as well double down on your favorites.</p>
+  <h2>4. Macro <> Micro</h2>
+  <p>Diving into a quarterly earnings report gives you a macro view of a company. You'll get a sense of things you might
     model on a spreadsheet: which business units are profitable, which ones are growing, and how much cash is on hand.
     Spending an hour with the CEO gives you a micro view. You'll get a sense of things you might learn from a magazine
     profile: what affects the CEO's mood, how the CEO makes decisions, and what are the values that guide the company's
-    priorities.
-    <br><br>
-    5. <b>Quantitative <> Qualitative</b>
-    <br><br>
-    Startups force you to build something customers really, really want. Retention is a great measure of this. What % of
+    priorities.</p>
+  <h2>5. Quantitative <> Qualitative</h2>
+  <p>Startups force you to build something customers really, really want. Retention is a great measure of this. What %
+    of
     the customers who use your product this week will use it next week? Measuring retention forces you to be honest with
     yourself about your product's value. But retention don't tell you why people want your product. Instead, spend 10
     minutes speaking with 5 people who've ever tried your product. In under an hour, you'll get fresh ideas for who
-    might want your product and why.
-    <br><br>
-    6. <b>Long term <> Short term</b>
-    <br><br>
-    You will likely be around for a long time. Focusing on the long term frees you to prioritize the 20% that matters
+    might want your product and why.</p>
+  <h2>6. Long term <> Short term</h2>
+  <p>You will likely be around for a long time. Focusing on the long term frees you to prioritize the 20% that matters
     and disregard the noise of the remaining 80%.  Thinking over a long time horizon leads you to value small, boring,
     compounding benefits. But life is short. The future might never come - it exists only in your imagination. The
-    present is tangible and real. Savor it in as much detail as you can.
-    <br><br>
-    7. <b>Togetherness <> Solitude</b>
-    <br><br>
-    What's the use of learning something new, feeling something profound, or making something grand if you can't share
+    present is tangible and real. Savor it in as much detail as you can.</p>
+  <h2>7. Togetherness <> Solitude</b></h2>
+  <p>What's the use of learning something new, feeling something profound, or making something grand if you can't share
     it with others? We're social animals, hardwired to crave connection and distinguished by our ability to cooperate
     with others. But, nobody else can read your mind or feel your emotions, try as they might. Making sense of it all is
-    something you have to do for yourself in your own time.
-    <br><br>
-    If any of these resonate with you or you have suggestions on others to include, please let me know via <a
-      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!
-  </p>
+    something you have to do for yourself in your own time.</p>
+  <p>If any of these resonate with you or you have suggestions on others to include, please let me know via <a
+      target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>!</p>
 
 </body>
 
