--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Ani Mohan</title>
@@ -9,10 +10,9 @@
   <meta name="description" content="Ani Mohan home page personal site">
   <meta name="author" content="Ani Mohan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./images/favicon.png">
   <link rel="stylesheet" href="./css/styles.css">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158669626-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -21,6 +21,7 @@
     gtag('config', 'UA-158669626-1');
   </script>
 </head>
+
 <body>
   <h1>Ani Mohan</h1>
   <div>
@@ -28,7 +29,8 @@
   </div>
   <p>
     Welcome to my website. I currently lead a product team at Google Labs building new generative AI products.
-    Previously, I was co-founder and general manager of <a target="_blank" href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
+    Previously, I was co-founder and general manager of <a target="_blank"
+      href="https://www.gamedeveloper.com/business/google-s-html5-game-platform-gamesnacks-crosses-35-million-users">GameSnacks</a>,
     a gaming platform acquired by Google.
     <br><br>
     <a href="./start-here.html">Start here</a> if you don't know me.
@@ -38,4 +40,5 @@
     Connect with me on <a target="_blank" href="https://twitter.com/ani_c_mohan">Twitter</a>.
   </p>
 </body>
+
 </html>
