Adding human intelligence abundant blog post

--- a/start-here.html
+++ b/start-here.html
@@ -48,8 +48,9 @@
         the most</a>). Once I invest, I love helping founders with
       management, conflict resolution, product strategy, user research, communications, and managing their psychology.
       <br><br>
-      I live in New York City. I spent many years living in San Francisco. I grew up in Northern
-      Virginia. I'm interested in health/wellness, novels, biographies, podcasts, films, live music, psychology, nature,
+      I currently live in New York City. Previously I lived in San Francisco, went to school in North Carolina,
+      and grew up in Northern Virginia. I'm
+      interested in health/wellness, novels, biographies, podcasts, films, live music, psychology, nature, spirituality,
       and travel.
       <br><br>
       Get to know me better by <a href="./writings.html">reading stuff I've written</a>.
