--- a/writings.html
+++ b/writings.html
@@ -32,6 +32,8 @@
     My writings
   </h1>
   <p>
+    <a href="./writings/human-intelligence-abundant.html">When human intelligence becomes abundant</a>
+    <br><br>
     <a href="./writings/how-clubhouse-evolved-from-gaming.html">How Clubhouse evolved from gaming</a>
     <br><br>
     <a href="./writings/team-market-product.html">Team > market > product</a>
